src/objects/Invoice_Sync__c.object
<CustomObject>
    <description>QB SF Invoice Sync</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Sync</relationshipLabel>
        <relationshipName>Invoice_Sync</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Id__c</fullName>
        <label>QB Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Invoice Sync</label>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>Invoice Sync Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Sync</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>